# TensorflowLite-flexdelegate

./: .gitignore  README.md  log-cleaner.sh
models/: README.md  enet.tflite  model_structure_description.md
models/enet/: README.md  enet.pb  enet.tflite  enet.tflite.html
models/lsmod/Learning-to-See-Moving-Objects-in-the-Dark/: freeze_lsmod.py  network.py  requirements.txt  test.py
models/lsmod/Learning-to-See-Moving-Objects-in-the-Dark/0_data/: download_dataset.sh
models/lsmod/Learning-to-See-Moving-Objects-in-the-Dark/1_checkpoint/16_bit_HE_to_HE_gt/: download_checkpoint.sh
so/2.0.0/: download_armv7l_libtensorflowlite.so.sh  download_x86-64_libtensorflowlite.so.sh
so/2.1.0-rc2/: download_debian_buster_aarch64_libtensorflowlite.so.sh  download_ubuntu1910_aarch64_libtensorflowlite.so.sh
test/enet/: CMakeLists.txt  main.cpp
test/enet/cmakes/: PC_LINUX.cmake  RASPI_NATIVE.cmake  common.cmake
test/enet/resource/: enet.tflite
